--- a/templates/methodology.html
+++ b/templates/methodology.html
@@ -5,7 +5,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-
+  <link rel="icon" href="https://globalenergymonitor.org/wp-content/uploads/2020/12/cropped-site-icon-32x32.png" sizes="32x32" />
+  
 	<!-- This site is optimized with the Yoast SEO plugin v20.8 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Energy Policy Interactive Map</title>
 	<style type="text/css">svg:not(:root).svg-inline--fa {
@@ -954,7 +955,7 @@ var SF_LDATA = {"ajax_url":"https:\/\/globalenergymonitor.org\/wp-admin\/admin-a
       </picture>
     
     
-    <h1 class="page-header__title">Global Coal Mine Tracker</h1>
+    <h1 class="page-header__title">Steel Decarbonization Policy Tool</h1>
 
           <details class="mobile-submenu">
         <summary class="mobile-submenu__btn">
@@ -975,9 +976,7 @@ var SF_LDATA = {"ajax_url":"https:\/\/globalenergymonitor.org\/wp-admin\/admin-a
       <div class="main-sidebar-wrap">
         <main class="main" id="main" tabindex="-1">
                  <picture class="project-banner--lg">
-    <source media="(max-width: 1199px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2021/11/mine-banner-1024x319.png">
-    <source media="(min-width: 1200px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2021/11/mine-banner.png">
-    <img src="./static/global_files/mine-banner.png" alt="">
+    <img src="./static/images/main.jpg" alt="">
   </picture>
 
   
@@ -1009,11 +1008,9 @@ var SF_LDATA = {"ajax_url":"https:\/\/globalenergymonitor.org\/wp-admin\/admin-a
 
   <h3>Mapping</h3>
 
-   <p>The tool was built using Flask in Python along with Javascript and HTML. The initial network was built using pyvis in Python. The interface is managed by Flask and the interactive changes are carried out by vis.JS. All text boxes 
-   and dynamic re-positioning in handled via customized code in Python.</p><br><br>
+   <p>The Steel Decarbonization Policy Tool was built using Flask in Python, along with Javascript and HTML. The initial network was built using pyvis in Python. The interface is managed by Flask, while interactive changes are carried out by vis.JS. All text boxes and dynamic re-positioning are handled via customized code in Python.</p><br><br>
 
-   <i> This tool is published under a Creative Commons Attribution 4.0 International License. The original model underlying this interactive tool, first published in August 2023, is based on the paper “Breaking the Barriers to Steel Decarbonization - A Policy Guide” by Nele Merholz (April 2023). Parts of the original web design and content visualization were done by Sohit Miglani. </i>
-
+   <i> This tool is published under a Creative Commons Attribution 4.0 International License. The original model underlying this interactive tool, first published in September 2023, is based on the paper “Breaking the Barriers to Steel Decarbonization - A Policy Guide” by Nele Merholz (April 2023). The original web design, development and content visualization were done by Sohit Miglani. </i>
 
 <hr class="wp-block-separator has-css-opacity is-style-wide">
 
