--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-
+  <link rel="icon" href="https://globalenergymonitor.org/wp-content/uploads/2020/12/cropped-site-icon-32x32.png" sizes="32x32" />
+  
 	<!-- This site is optimized with the Yoast SEO plugin v20.8 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Steel Decarbonization Policy Tool</title>{% extends "bootstrap/base.html" %}{% block content %}
 	<style type="text/css">svg:not(:root).svg-inline--fa {
@@ -457,6 +458,24 @@
   fill: black;
 }
 
+figure {
+  flex-flow: column;
+  margin: auto;
+  display: flex;
+  position: relative;
+
+}
+
+figcaption {
+  text-align: center;
+  position: absolute;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  bottom: 0px;
+  font-size: 20px;
+  color: white;
+}
+
 .fad.fa-inverse {
   color: #fff;
 }</style><link rel="canonical" href="https://globalenergymonitor.org/projects/global-coal-mine-tracker/">
@@ -467,7 +486,7 @@
 	<meta property="og:url" content="https://globalenergymonitor.org/projects/global-coal-mine-tracker/">
 	<meta property="og:site_name" content="Global Energy Monitor">
 	<meta property="article:modified_time" content="2023-07-18T16:27:29+00:00">
-	<meta property="og:image" content="https://globalenergymonitor.org/wp-content/uploads/2020/12/dragline-surface-mining-004.jpg">
+	<meta property="og:image" content="./static/images/main.jpeg">
 	<meta property="og:image:width" content="1540">
 	<meta property="og:image:height" content="856">
 	<meta property="og:image:type" content="image/jpeg">
@@ -950,7 +969,7 @@ var SF_LDATA = {"ajax_url":"https:\/\/globalenergymonitor.org\/wp-admin\/admin-a
         <source media="(max-width: 479px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2020/12/dragline-surface-mining-004-450x250.jpg">
         <source media="(min-width: 480px) and (max-width: 767px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2020/12/dragline-surface-mining-004-1024x569.jpg">
         <source media="(min-width: 768px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2021/11/mine-banner.png">
-        <img src="./static/global_files/mine-banner.png" alt="An excavating machine sits next to an open pit mine">
+        <img src="./static/global_files/main.png">
       </picture>
     
     
@@ -975,25 +994,21 @@ var SF_LDATA = {"ajax_url":"https:\/\/globalenergymonitor.org\/wp-admin\/admin-a
       <div class="main-sidebar-wrap">
         <main class="main" id="main" tabindex="-1">
                  <picture class="project-banner--lg">
-    <source media="(max-width: 1199px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2021/11/mine-banner-1024x319.png">
-    <source media="(min-width: 1200px)" srcset="https://globalenergymonitor.org/wp-content/uploads/2021/11/mine-banner.png">
-    <img src="./static/global_files/mine-banner.png" alt="">
+    
   </picture>
 
-  
+  <img src="./static/images/main.jpg" alt="">
   <span class="page-header__title page-header__title--project-lg" aria-hidden="true">Steel Decarbonization Policy Tool</span>
 
 <p> The Steel Decarbonization Policy Tool (SDPT) provides information on 20 structural barriers (referred to as “challenges and opportunities”) for steel decarbonization, and includes proposals to address each of them through policy. Structural barriers are systemic conditions in the industry that inhibit the decarbonization of steel, which interact with each other, keeping the current system in place. Understanding each individually in terms of the challenges and opportunities they present to the green steel transition, as well as their broader interactions, allows policymakers to strategize about which to address first or simultaneously to effectively decarbonize steel. This tool uses research on global steel markets to map potential challenges and their interactions, allowing the distinction between enabling and reinforcing factors. This tool also helps to inform which problems may exist at a local level, and which policy actions could be taken to promote a transition. </p>
 
-<div class="tracker-launch-buttons__map">
-      <figure style="background-image:url('https://globalenergymonitor.org/wp-content/uploads/2021/02/Coal-map-image-1024x581.jpg');">
+      <figure style='border-width=1px; border-radius: 15px; padding: 20px; border-color: #792424'> 
+        <a href="./map" target="_blank" style="color: #792424; text-decoration: none; font-family: 'Open Sans';">
+        <img src="./static/images/map.png">
         <figcaption>
-          <a href="./map" target="_blank">
-            <span>Launch Intercative Policy Tool</span> <i class="fas fa-arrow-right"></i></a>
+            <span><b>Launch Interactive Policy Tool</span> &#8599;</a></b>
         </figcaption>
       </figure>
-  </div>
-
 
 <hr class="wp-block-separator has-css-opacity is-style-wide">
 
