--- a/templates/map.html
+++ b/templates/map.html
@@ -1326,6 +1326,8 @@ Financial Institutions need information about steel production types and the res
 
           </main>
             <aside class="sidebar">
+                
+            <ul id="menu--sidebar" class="menu--sidebar"></ul><br><br><br><br><br><br><br><br><br><br><br>
 
             <form class="container" enctype="multipart/form-data" method="post" style='width: 450px; font-size: 12px; margin-left: 0px'>
 
