--- a/templates/map.html
+++ b/templates/map.html
@@ -1321,6 +1321,43 @@ Financial Institutions need information about steel production types and the res
 
 </details></p>
 
+  <span class="page-header__title page-header__title--project-lg" aria-hidden="true">Steel Decarbonization Policy - Methodology</span>
+
+  <h3>Architecture</h3>
+  <p>Global Energy Monitor’s Interactive Steel Decarbonization Tool uses a two-level system for organizing information, consisting of a system map and wiki pages with further information. The system map visualizes 20 structural challenges and opportunities (i.e. barriers) to decarbonization and the reinforcing relationships between them. It includes information on each of the challenges and opportunities, policy proposals, and nature of the relationships. A Wiki page for each one is created within GEM.wiki, and contains more detailed, footnoted information, such as context about the challenges and opportunities, their role in the steel decarbonization, potential policies to address them, and relevant case studies and examples.</p>
+
+  <h3>Research Process</h3>
+  <p>The challenges and opportunities and their relationships were identified from various research studies on steel and industry decarbonization, by organizations such as the International Energy Agency (IEA), United Nations Environmental Program (UNEP), Mission Possible Partnership, Net Zero Steel, the World Steel Organization, Breakthrough Energy, the OECD, Energy Transitions Commission, International Energy Outlook, Global Efficiency Intelligence, McKinsey & Company, Climate Bonds Initiative, TransitionZero, Global Energy Monitor, national and regional government agencies, and more. Information was then vetted against additional sources, including interviews with industry experts. Case studies and examples in the Wiki pages were gathered using company announcements, press releases, and data from the Global Energy Monitor’s Global Steel Plant Tracker (GSPT) and Global Blast Furnace Tracker (GBFT), as well as the Green Steel Tracker.</p>
+
+  <h3>Assumptions</h3>
+  <p>This model includes all large challenges and opportunities identified through the research process. While all are included in the system map, they may not all be relevant or applicable in every context. There may also be additional factors and relationships to consider. The model serves as a starting point for understanding and developing steel decarbonization policies, and should be re-evaluated on a contextual basis.<br><br>
+
+  The analysis is based on two assumptions, which were deduced through the research process and the interviews conducted. No steel company can or will decarbonize if:
+  <ul>
+     <li>
+  The production of green or low-emissions steel is (in the long-term) less profitable than the current method of production, except if they have to switch due to wider regulatory requirements. 
+    </li>
+    <li>
+    A transition is so expensive that it will put the company at risk of going bankrupt.
+  </li></ul><br>
+
+    While these assumptions should be re-evaluated within local contexts, they are foundational to the model and highlight the importance of acknowledging financial, technological, and political constraints.
+
+  <h3>Wiki Pages</h3>
+
+  <p>For each structural barrier, a Wiki page is created on Global Energy Monitor’s GEM.wiki. Wiki pages provide a repository for the background information on steel decarbonization, challenges and opportunities, potential policy actions, examples and case studies, and additional resources about the topic. Under standard Wiki convention, all information is linked to a published reference, such as a news article, company or government report, or study in the field. In order to ensure data integrity in the open-access Wiki environment, Global Energy Monitor researchers review all edits of project Wiki pages.</p>
+
+  <h3>Mapping</h3>
+
+   <p>The Steel Decarbonization Policy Tool was built using Flask in Python, along with Javascript and HTML. The initial network was built using pyvis in Python. The interface is managed by Flask, while interactive changes are carried out by vis.JS. All text boxes and dynamic re-positioning are handled via customized code in Python.</p><br><br>
+
+   <i> This tool is published under a Creative Commons Attribution 4.0 International License. The original model underlying this interactive tool, first published in September 2023, is based on the paper “Breaking the Barriers to Steel Decarbonization - A Policy Guide” by Nele Merholz (April 2023). The original web design, development and content visualization were done by Sohit Miglani. </i>
+
+<hr class="wp-block-separator has-css-opacity is-style-wide">
+
+
+<p></p>		
+
 <hr class="wp-block-separator has-css-opacity is-style-wide">
 
 
