--- a/templates/map.html
+++ b/templates/map.html
@@ -1320,9 +1320,11 @@ Financial Institutions need information about steel production types and the res
 </ul>
 
 </details></p>
-
-  <span class="page-header__title page-header__title--project-lg" aria-hidden="true">Steel Decarbonization Policy - Methodology</span>
-
+		
+  <hr style='color: #84d7d6'>
+  <h2><b> Methodlogy </b></h2>
+  <hr style='color: black; width: 350px'>
+		
   <h3>Architecture</h3>
   <p>Global Energy Monitor’s Interactive Steel Decarbonization Tool uses a two-level system for organizing information, consisting of a system map and wiki pages with further information. The system map visualizes 20 structural challenges and opportunities (i.e. barriers) to decarbonization and the reinforcing relationships between them. It includes information on each of the challenges and opportunities, policy proposals, and nature of the relationships. A Wiki page for each one is created within GEM.wiki, and contains more detailed, footnoted information, such as context about the challenges and opportunities, their role in the steel decarbonization, potential policies to address them, and relevant case studies and examples.</p>
 
