--- a/templates/map.html
+++ b/templates/map.html
@@ -1322,7 +1322,7 @@ Financial Institutions need information about steel production types and the res
 </details></p>
 		
   <hr style='color: #84d7d6'>
-  <h2><b> Methodlogy </b></h2>
+  <h2><b> Methodology </b></h2>
   <hr style='color: black; width: 350px'>
 		
   <h3>Architecture</h3>
